# django-formsaurus

./: .gitignore  boot_django.py  boot_urls.py  load_tests.py  setup.cfg
formsaurus/: __init__.py  admin.py  apps.py  forms.py  models.py  serializer.py  urls.py  utils.py  views.py
formsaurus/manage/: forms.py  pexels.py  stats.py  tenor.py  unsplash.py  urls.py  views.py
formsaurus/management/commands/: fake.py
formsaurus/migrations/: 0001_initial.py  0002_auto_20201012_2026.py  0003_auto_20201019_2133.py  0004_survey_show_branding.py
formsaurus/static/: survey.js
formsaurus/templates/: completed.html  index.html  skeleton.html  survey.html
formsaurus/templates/formsaurus/: closed.html  completed.html  question.html  skeleton.html  survey_add.html  survey_add_hidden_field.html  survey_add_question.html  survey_wizard.html  surveys.html  video.html
formsaurus/templates/formsaurus/manage/: image_modal.html  logic_add.html  navbar.html  submission.html  submissions.html  survey_add.html  survey_add_hidden_field.html  survey_add_question.html  (+3 more)
formsaurus/templates/templates/: base.html  date.html  dropdown.html  multiple_choice.html  number.html  opinion_scale.html  phone_number.html  picture_choice.html  rating.html  website.html  yes_no.html
formsaurus/templatetags/: formsaurus.py
formsaurus/tests/: __init__.py  date.py  dropdown.py  email.py  file_upload.py  legal.py  long_text.py  multiple_choice.py  number.py  opinion_scale.py  phone_number.py  picture_choice.py  rating.py  short_text.py  statement.py  website.py  welcome_screen.py  yes_no.py
(+25 files in other folders)
