[metadata]
name = django-formsaurus
version = 0.0.1
description = A Survey and Form Application
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/formsaurus/django-formsaurus
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 3.0
    python-dateutil >= 2.8
